--- a/index.html
+++ b/index.html
@@ -83,11 +83,17 @@
 <li>Arijit Banerjee, Dustin Maas, Maurizio Bocca, Neal Patwari, and Sneha Kasera.<br>
 <a href="http://dl.acm.org/citation.cfm?id=2627418">Violating Privacy Through Walls by Passive Monitoring of Radio Windows</a>. ACM WiSec 2014.</li>
 
+<li>Seongho Byeon, Kangjin Yoon, Okhwan Lee, Sunghyun Choi, Woonsun Cho, and Seungseok Oh.<br>
+<a href="http://www.mwnl.snu.ac.kr/~schoi/publication/Conferences/14-CONEXT-BYEON.pdf">MoFA: Mobility-aware Frame Aggregation in Wi-Fi</a>. ACM CoNEXT 2014.</li>
+
 <li>Yogita Chapre, Aleksandar Ignjatovic, Aruna Seneviratne, and Sanjay Jha.<br>
 CSI-MIMO Indoor Wi-Fi Fingerprinting System. IEEE LCN 2014.</li>
 
 <li>Yi-Chao Chen, Lili Qiu, Yin Zhang, Guangtao Xue, and Zhenxian Hu. nc<br>
-<a href="Robust Network Compressive Sensing">Robust Network Compressive Sensing</a>. ACM MobiCom 2014.</li>
+<a href="http://dl.acm.org/citation.cfm?id=2639129">Robust Network Compressive Sensing</a>. ACM MobiCom 2014.</li>
+
+<li>Yingjie Chen, Wei Wang, and Qian Zhang. nc<br>
+<a href="http://www.cse.ust.hk/~gswwang/Wei_files/papers/PriLA_globecom14.pdf">Privacy-Preserving Location Authentication in WiFi with Fine-Grained Physical Layer Information</a>. IEEE GLOBECOM 2014.</li>
 
 <li>Jon Gjengset, Jie Xiong, Graeme McPhillips, and Kyle Jamieson.<br>
 <a href="http://dl.acm.org/citation.cfm?id=2639139">Phaser: enabling phased array signal processing on commodity WiFi access points</a>. ACM MobiCom 2014.</li>
@@ -106,6 +112,9 @@ CSI-MIMO Indoor Wi-Fi Fingerprinting System. IEEE LCN 2014.</li>
 
 <li>Swarun Kumar, Stephanie Gil, Dina Katabi, and Daniela Rus.<br>
 <a href="http://dl.acm.org/citation.cfm?id=2639142">Accurate indoor localization with zero start-up cost</a>. ACM MobiCom 2014.</li>
+
+<li>Okhwan Lee, Jihoon Kim, Jongtae Lim, and Sunghyun Choi. nc<br>
+<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6957530">SIRA: SNR-aware Intra-frame Rate Adaptation</a>. IEEE Communications Letters, November 2014.</li>
 
 <li>Suchul Lee, Jaehyuk Choi, Joon Yoo, and Chong-Kwon Kim.<br>
 <a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6819850">Frequency Diversity-Aware Wi-Fi Using OFDM-based Bloom Filters</a>. IEEE Trans. Mobile Computing 2014.</li>
