--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@ CSI-MIMO Indoor Wi-Fi Fingerprinting System. IEEE LCN 2014.</li>
 <li>Hongbo Liu, Yang Wang, Jian Liu, Jie Yang, and Yingying Chen. nc<br>
 <a href="http://dl.acm.org/citation.cfm?id=2590321">Practical User Authentication Leveraging Channel State Information (CSI)</a>. ASIA CCS 2014.</li>
 
+<li>Minsu Park, Okhwan Lee, Bo Ryu, Sunghyun Choi, Byeonggi Lee. nc<br>
+<a href="http://www.dbpia.co.kr/Journal/ArticleDetail/3416636">An Energy Efficient Rate Adaptation Method in IEEE 802.11n WLAN</a>. Korea Information and Communications Society General Conference (Winter) 2014.</li>
+
 <li>Yan Wang, Jian Liu, Yingying Chen, Marco Gruteser, Jie Yang, and Hongbo Liu.<br>
 <a href="http://dl.acm.org/citation.cfm?id=2639143">E-eyes: Device-free Location-oriented Activity Identification Using Fine-grained WiFi Signatures. </a>. ACM MobiCom 2014.</li>
 
