Chapre: add URL now that paper is out

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <a href="http://www.mwnl.snu.ac.kr/~schoi/publication/Conferences/14-CONEXT-BYEON.pdf">MoFA: Mobility-aware Frame Aggregation in Wi-Fi</a>. ACM CoNEXT 2014.</li>
 
 <li>Yogita Chapre, Aleksandar Ignjatovic, Aruna Seneviratne, and Sanjay Jha.<br>
-CSI-MIMO Indoor Wi-Fi Fingerprinting System. IEEE LCN 2014.</li>
+<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6925773">CSI-MIMO Indoor Wi-Fi Fingerprinting System</a>. IEEE LCN 2014.</li>
 
 <li>Yi-Chao Chen, Lili Qiu, Yin Zhang, Guangtao Xue, and Zhenxian Hu. nc<br>
 <a href="http://dl.acm.org/citation.cfm?id=2639129">Robust Network Compressive Sensing</a>. ACM MobiCom 2014.</li>
