--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 <li>Hongbo Liu, Yang Wang, Jian Liu, Jie Yang, and Yingying Chen. nc<br>
 <a href="http://dl.acm.org/citation.cfm?id=2590321">Practical User Authentication Leveraging Channel State Information (CSI)</a>. ASIA CCS 2014.</li>
 
+<li>Rajalakshmi Nandakumar, Bryce Kellogg, and Shyamnath Gollakota.<br>
+<a href="http://arxiv.org/abs/1411.5394">Wi-Fi Gesture Recognition on Existing Devices</a>. arXiv preprint arXiv:1411.5394 2014.</li>
+
 <li>Minsu Park, Okhwan Lee, Bo Ryu, Sunghyun Choi, Byeonggi Lee. nc<br>
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/3416636">An Energy Efficient Rate Adaptation Method in IEEE 802.11n WLAN</a>. Korea Information and Communications Society General Conference (Winter) 2014.</li>
 
