--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 <li>Chunmei Han, Kaishun Wu, Yuxi Wang, and Lionel M. Ni.<br>
 <a href="http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=6847948">WiFall: Device-free fall detection by wireless networks</a>. IEEE INFOCOM 2014.</li>
 
+<li>Dai Hanyi and Zhang Gong. nc<br>
+<a href="http://en.cnki.com.cn/Article_en/CJFDTotal-DZGS201401014.htm">The Research and Tests of Wi-Fi Interference Based on IEEE 802.11n CSI-Tool</a>. Electronic Engineer, Vol. 40, No. 1, Feb. 2014.</li>
+
 <li>Zhiping Jiang, Wei Xi, Xiangyang Li, Shaojie Tang, Ji-Zhong Zhao, Jin-Song Han, Kun Zhao, Zhi Wang, and Bo Xiao. nc<br>
 <a href="http://link.springer.com/article/10.1007%2Fs11390-014-1452-7">Communicating Is Crowdsourcing: Wi-Fi Indoor Localization with CSI-based Speed Estimation</a>. Springer J. Computer Science and Technology 2014.</li>
 
