--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
 <li>Yunze Zeng, Parth H. Pathak, Chao Xu, and Prasant Mohapatra.<br>
 <a href="http://www.phpathak.com/files/apsense.pdf">Your AP Knows How You Move: Fine-grained Device Motion Recognition through WiFi</a>. ACM HotWireless 2014.</li>
 
-<li>Zenghua Zhao, Fucheng Zhang, Shaoping Guo, Xiang-Yang Li, Junze Han<br>
+<li>Xiuyuan Zheng, Chen Wang, Yingying Chen, and Jie Yang. nc<br>
+<a href="http://personal.stevens.edu/~ychen6/papers/Accurate Rogue Access Point Localization Leveraging Fine-grained Channel Information.pdf">Accurate Rogue Access Point Localization Leveraging Fine-grained Channel Information</a>. IEEE CNS 2014.</li>
+
+<li>Zenghua Zhao, Fucheng Zhang, Shaoping Guo, Xiang-Yang Li, and Junze Han.<br>
 <a href="http://www.cs.iit.edu/~xli/paper/Conf/rate-ipccc14.pdf">RainbowRate: MIMO Rate Adaptation in 802.11n WiLD Links</a>. IEEE IPCCC 2014.</li>
 
 <li>Zimu Zhou, Zheng Yang, Chenshu Wu, Longfei Shangguan, and Yunhao Liu. nc<br>
